--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -125,7 +125,9 @@ h1 {
   font-size: 70px;
 }
 
-p, .signInErrorMessage {
+p,
+.signInErrorMessage,
+.baby-size-text {
   font-family: 'Mandali', sans-serif;
   text-align: center;
   opacity: 0.6;
@@ -135,28 +137,42 @@ p {
   font-size: 18px;
 }
 
+.baby-size-text {
+  font-size: 18px;
+}
+
 .signInErrorMessage {
   font-size: 14px;
 }
 
-img {
+.home-img {
   display: block;
   width: 51%;
   margin: auto;
   height: auto;
 }
 @media only screen and (max-width: 750px) {
-  img {
+  .home-img,
+  .baby-size-img {
     width: 90%;
   }
 }
 
 @keyframes pulse_animation {
 	0% { transform: scale(1); }
-	50% { transform: scale(1.04); }
+	50% { transform: scale(1.03); }
 	100% { transform: scale(1); }
 }
 
-.pulse {
+.home-img,
+.baby-size-img {
   animation: pulse_animation 3s ease-in-out infinite;
+}
+
+.baby-size-img {
+  padding-top: 25px;
+  width: 35%;
+  display: none;
+  margin: auto;
+  height: auto;
 }
