--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -5,6 +5,7 @@
 html,
 .container-fluid {
   background: #dad7f0;
+  font-family: 'Mandali', sans-serif;
 }
 
 header {
@@ -32,13 +33,16 @@ header {
 
 .sign-in-area {
   width: 210px;
-  right: 0;
 }
 
 .sign-out-area {
-  width: 500px;
+  width: 300px;
   text-align: right;
   padding-right: 10px;
+}
+
+.sign-out-area > fieldset {
+  position: relative;
 }
 
 @media all and (max-width: 750px) {
@@ -64,6 +68,7 @@ header {
 
 .view-baby-stat {
   font-size: 25px;
+  opacity: 0.7;
 }
 
 .age-box {
@@ -90,26 +95,20 @@ form {
   left: 0;
 }
 
-.pwd {
-  float: right;
-  right: 0;
+#change-password {
+  padding-top: 5px;
+  padding-left: 100px;
+  padding-bottom: 100px;
 }
 
 input {
   display: block;
   border: none;
   margin-top: 10px !important;
-  margin-right: 125px;
+  /*margin-right: 125px;*/
   padding: 7px;
   border-radius: 5px;
   outline: none;
-}
-
-input[type=submit] {
-  background-color: #f3e5f9;
-  border: none;
-  padding: 7px;
-  border-radius: 5px;
 }
 
 button {
@@ -118,8 +117,7 @@ button {
   border: none;
   border-radius: 5px;
   transition-duration: 0.4s;
-  padding: 10px 25px;
-  border-top: 50px;
+  padding: 10px 20px;
 }
 
 button:hover {
