--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -13,6 +13,10 @@ header {
   text-align: center;
 }
 
+.hidden {
+  display: none;
+}
+
 .title {
   display: block;
   width: 250px;
@@ -81,10 +85,6 @@ form {
   margin: 15px;
   padding: 6px 0;
   height: 3em;
-}
-
-.hidden {
-  display: none;
 }
 
 .remove-baby {
@@ -162,10 +162,30 @@ p {
   margin: auto;
   height: auto;
 }
-@media only screen and (max-width: 750px) {
-  .home-img,
-  .baby-size-img {
+.home-img,
+.baby-size-img {
+  animation: pulse_animation 3s ease-in-out infinite;
+}
+.baby-size-img {
+  padding-top: 35px;
+  width: 35%;
+  display: none;
+  margin: auto;
+  height: auto;
+}
+@media only screen and (max-width: 800px) {
+  .home-img {
     width: 90%;
+  }
+}
+@media only screen and (max-width: 750px) {
+  .baby-size-img {
+    width: 60%;
+  }
+}
+@media only screen and (min-width: 1175px) {
+  .home-img {
+    width: 40%;
   }
 }
 
@@ -173,17 +193,4 @@ p {
 	0% { transform: scale(1); }
 	50% { transform: scale(1.03); }
 	100% { transform: scale(1); }
-}
-
-.home-img,
-.baby-size-img {
-  animation: pulse_animation 3s ease-in-out infinite;
-}
-
-.baby-size-img {
-  padding-top: 35px;
-  width: 35%;
-  display: none;
-  margin: auto;
-  height: auto;
 }
